--- a/bwapi/Backend/libprotobuf-lite/libprotobuf-lite.vcxproj.filters
+++ b/bwapi/Backend/libprotobuf-lite/libprotobuf-lite.vcxproj.filters
@@ -1,138 +1,138 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\io\zero_copy_stream_impl_lite.cc">
+    <ClCompile Include="src\google\protobuf\io\zero_copy_stream_impl_lite.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\io\zero_copy_stream.cc">
+    <ClCompile Include="src\google\protobuf\io\zero_copy_stream.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\wire_format_lite.cc">
+    <ClCompile Include="src\google\protobuf\wire_format_lite.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\time.cc">
+    <ClCompile Include="src\google\protobuf\stubs\time.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\strutil.cc">
+    <ClCompile Include="src\google\protobuf\stubs\strutil.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\structurally_valid.cc">
+    <ClCompile Include="src\google\protobuf\stubs\structurally_valid.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\stringprintf.cc">
+    <ClCompile Include="src\google\protobuf\stubs\stringprintf.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\stringpiece.cc">
+    <ClCompile Include="src\google\protobuf\stubs\stringpiece.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\statusor.cc">
+    <ClCompile Include="src\google\protobuf\stubs\statusor.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\status.cc">
+    <ClCompile Include="src\google\protobuf\stubs\status.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\repeated_field.cc">
+    <ClCompile Include="src\google\protobuf\repeated_field.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\message_lite.cc">
+    <ClCompile Include="src\google\protobuf\message_lite.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\io_win32.cc">
+    <ClCompile Include="src\google\protobuf\stubs\io_win32.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\int128.cc">
+    <ClCompile Include="src\google\protobuf\stubs\int128.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\implicit_weak_message.cc">
+    <ClCompile Include="src\google\protobuf\implicit_weak_message.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\generated_message_util.cc">
+    <ClCompile Include="src\google\protobuf\generated_message_util.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\generated_message_table_driven_lite.cc">
+    <ClCompile Include="src\google\protobuf\generated_message_table_driven_lite.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\extension_set.cc">
+    <ClCompile Include="src\google\protobuf\extension_set.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\common.cc">
+    <ClCompile Include="src\google\protobuf\stubs\common.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\io\coded_stream.cc">
+    <ClCompile Include="src\google\protobuf\io\coded_stream.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\bytestream.cc">
+    <ClCompile Include="src\google\protobuf\stubs\bytestream.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\arenastring.cc">
+    <ClCompile Include="src\google\protobuf\arenastring.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\arena.cc">
+    <ClCompile Include="src\google\protobuf\arena.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\arena.h">
+    <ClInclude Include="src\google\protobuf\arena.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\arenastring.h">
+    <ClInclude Include="src\google\protobuf\arenastring.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\bytestream.h">
+    <ClInclude Include="src\google\protobuf\stubs\bytestream.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\io\coded_stream.h">
+    <ClInclude Include="src\google\protobuf\io\coded_stream.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\common.h">
+    <ClInclude Include="src\google\protobuf\stubs\common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\extension_set.h">
+    <ClInclude Include="src\google\protobuf\extension_set.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\generated_message_util.h">
+    <ClInclude Include="src\google\protobuf\generated_message_util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\implicit_weak_message.h">
+    <ClInclude Include="src\google\protobuf\implicit_weak_message.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\int128.h">
+    <ClInclude Include="src\google\protobuf\stubs\int128.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\message_lite.h">
+    <ClInclude Include="src\google\protobuf\message_lite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\once.h">
+    <ClInclude Include="src\google\protobuf\stubs\once.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\repeated_field.h">
+    <ClInclude Include="src\google\protobuf\repeated_field.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\status.h">
+    <ClInclude Include="src\google\protobuf\stubs\status.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\statusor.h">
+    <ClInclude Include="src\google\protobuf\stubs\statusor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\stringpiece.h">
+    <ClInclude Include="src\google\protobuf\stubs\stringpiece.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\stringprintf.h">
+    <ClInclude Include="src\google\protobuf\stubs\stringprintf.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\strutil.h">
+    <ClInclude Include="src\google\protobuf\stubs\strutil.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\stubs\time.h">
+    <ClInclude Include="src\google\protobuf\stubs\time.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\wire_format_lite.h">
+    <ClInclude Include="src\google\protobuf\wire_format_lite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\io\zero_copy_stream.h">
+    <ClInclude Include="src\google\protobuf\io\zero_copy_stream.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="C:\Users\Adam Heinermann\Downloads\protobuf-cpp-3.6.0\protobuf-3.6.0\src\google\protobuf\io\zero_copy_stream_impl_lite.h">
+    <ClInclude Include="src\google\protobuf\io\zero_copy_stream_impl_lite.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
